--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "concurrently": "^9.2.1"
+    "axios": "^1.13.5",
+    "concurrently": "^9.2.1",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.13.0"
   }
 }
